Add new book updated